refactor: organize prompts and enforce scoped generation contracts